--- a/app/src/main/res/layout/dialog_success.xml
+++ b/app/src/main/res/layout/dialog_success.xml
@@ -29,6 +29,7 @@
                 android:layout_height="wrap_content" />
 
             <TextView
+                android:id="@+id/tv_mess"
                 android:layout_marginTop="16dp"
                 android:layout_gravity="center"
                 android:text="@string/mess_change_status"
@@ -37,6 +38,7 @@
                 android:layout_height="wrap_content" />
 
             <Button
+                android:id="@+id/btn_ok"
                 android:textSize="14sp"
                 android:textColor="@color/white"
                 android:text="@string/okay"
