--- a/app/src/main/res/layout/fragment_retaurantdetail_delivery.xml
+++ b/app/src/main/res/layout/fragment_retaurantdetail_delivery.xml
@@ -73,7 +73,6 @@
 
 
                 <LinearLayout
-                    android:paddingTop="8dp"
                     android:paddingBottom="8dp"
                     android:background="@color/bg_discount"
                     android:orientation="vertical"
@@ -81,6 +80,10 @@
                     android:layout_height="wrap_content">
 
                     <LinearLayout
+                        android:layout_marginTop="8dp"
+                        android:layout_marginBottom="8dp"
+                        android:visibility="visible"
+                        android:id="@+id/view_discount"
                         android:layout_marginLeft="8dp"
                         android:layout_marginRight="8dp"
                         android:gravity="center"
@@ -111,11 +114,11 @@
                     </LinearLayout>
 
                     <View
-                        android:layout_marginTop="8dp"
                         android:layout_marginBottom="8dp"
                         android:background="@color/grey"
                         android:layout_width="match_parent"
                         android:layout_height="0.5dp"/>
+
                     <LinearLayout
                         android:layout_marginLeft="8dp"
                         android:layout_marginRight="8dp"
