--- a/app/src/main/res/layout/item_restaurant_horizontal.xml
+++ b/app/src/main/res/layout/item_restaurant_horizontal.xml
@@ -1,41 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    android:id="@+id/viewRoot"
-    android:layout_marginTop="8dp"
-    android:layout_marginLeft="8dp"
-    android:layout_marginBottom="8dp"
-    android:orientation="vertical"
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="120dp"
+    android:layout_width="150dp"
     android:layout_height="wrap_content">
 
-    <ImageView
-        android:id="@+id/img_res"
-        android:scaleType="fitXY"
-        android:src="@drawable/bg_baner"
-        android:layout_width="120dp"
-        android:layout_height="50dp" />
+    <LinearLayout
+        android:id="@+id/viewRoot"
+        android:layout_margin="8dp"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/tv_name"
-        android:ellipsize="end"
-        android:maxLines="1"
-        android:textColor="@color/black"
-        android:fontFamily="sans-serif-medium"
-        android:textSize="14sp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Toco Toco Bubble Tes"/>
+        <ImageView
+            android:id="@+id/img_res"
+            android:scaleType="fitCenter"
+            android:layout_width="120dp"
+            android:layout_height="80dp" />
 
-    <TextView
-        android:id="@+id/tv_address"
-        android:ellipsize="end"
-        android:maxLines="1"
-        android:textColor="@color/black"
-        android:fontFamily="sans-serif-light"
-        android:textSize="12sp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="109 Hoang Dieu TP Ho Chi Minh"/>
+        <TextView
+            android:id="@+id/tv_name"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:textColor="@color/black"
+            android:fontFamily="sans-serif-medium"
+            android:textSize="14sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
-</LinearLayout>
+        <TextView
+            android:id="@+id/tv_address"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:textColor="@color/black"
+            android:fontFamily="sans-serif-light"
+            android:textSize="12sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/v_more"
+        android:visibility="gone"
+        android:gravity="center"
+        android:layout_gravity="center"
+        android:background="@color/trans"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <ImageView
+            android:layout_gravity="center"
+            android:src="@drawable/more"
+            android:layout_width="32dp"
+            android:layout_height="32dp" />
+
+    </LinearLayout>
+
+</FrameLayout>
