--- a/app/src/main/res/layout/view_add_restaurant.xml
+++ b/app/src/main/res/layout/view_add_restaurant.xml
@@ -16,6 +16,7 @@
         android:layout_height="match_parent">
 
         <TextView
+            android:id="@+id/tv_title"
             android:layout_marginTop="24dp"
             android:gravity="center"
             android:layout_gravity="center"
