--- a/app/src/main/res/layout/item_menu_restaurantdetail.xml
+++ b/app/src/main/res/layout/item_menu_restaurantdetail.xml
@@ -1,86 +1,104 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-    android:layout_margin="8dp"
-    android:weightSum="1"
+    android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <ImageView
-        android:id="@+id/im_menu"
-        android:layout_gravity="center"
-        android:scaleType="fitCenter"
-        android:layout_marginRight="8dp"
-        android:layout_weight="0.25"
-        android:src="@drawable/address"
-        android:layout_width="0dp"
+    <TextView
+        android:visibility="visible"
+        android:id="@id/tv_title"
+        android:maxLines="1"
+        android:ellipsize="end"
+        android:textAllCaps="true"
+        android:textSize="16sp"
+        android:padding="8dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
     <LinearLayout
-        android:layout_weight="0.55"
-        android:orientation="vertical"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content">
-
-        <TextView
-            android:id="@+id/tv_nameMenu"
-            android:fontFamily="sans-serif-medium"
-            android:textSize="14sp"
-            android:text="Sua tuoi tran chau"
-            android:textColor="@color/black"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-        <TextView
-            android:id="@+id/tv_desMenu"
-            android:ellipsize="end"
-           android:maxLines="3"
-            android:textSize="14sp"
-            android:text="mo ta jsajda asjdahdkjahd hkjh jhjsahda gshagd  ghjgasd hgasdjhagjhdgajhdgajhgdjhagdjhagjhdgajhgdjhagjhdgajhgdjhagdjhagjdgaj"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent" />
-
-        <TextView
-            android:id="@+id/tv_price"
-            android:textColor="@color/black"
-            android:layout_marginTop="8dp"
-            android:text="25,0000"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_marginLeft="8dp"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:layout_weight="0.2"
-        android:layout_width="0dp"
+        android:layout_margin="8dp"
+        android:weightSum="1"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <ImageView
-            android:visibility="gone"
-            android:id="@+id/btn_remove"
-            android:src="@drawable/remove"
-            android:layout_width="20dp"
-            android:layout_height="20dp" />
-
-        <TextView
-            android:visibility="gone"
-            android:id="@+id/tv_countMenu"
-            android:textSize="16sp"
-            android:textColor="@color/black"
-            android:layout_marginLeft="4dp"
-            android:layout_marginRight="4dp"
-            android:text="1"
-            android:layout_width="wrap_content"
+            android:id="@+id/im_menu"
+            android:layout_gravity="center"
+            android:scaleType="fitCenter"
+            android:layout_marginRight="8dp"
+            android:layout_weight="0.25"
+            android:src="@drawable/address"
+            android:layout_width="0dp"
             android:layout_height="wrap_content" />
 
-        <ImageView
-            android:id="@+id/btn_plus"
-            android:src="@drawable/plus"
-            android:layout_width="20dp"
-            android:layout_height="20dp" />
+        <LinearLayout
+            android:layout_weight="0.55"
+            android:orientation="vertical"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/tv_nameMenu"
+                android:fontFamily="sans-serif-medium"
+                android:textSize="14sp"
+                android:text="Sua tuoi tran chau"
+                android:textColor="@color/black"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/tv_desMenu"
+                android:ellipsize="end"
+                android:maxLines="3"
+                android:textSize="14sp"
+                android:text="mo ta jsajda asjdahdkjahd hkjh jhjsahda gshagd  ghjgasd hgasdjhagjhdgajhdgajhgdjhagdjhagjhdgajhgdjhagjhdgajhgdjhagdjhagjdgaj"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent" />
+
+            <TextView
+                android:id="@+id/tv_price"
+                android:textColor="@color/black"
+                android:layout_marginTop="8dp"
+                android:text="25,0000"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_marginLeft="8dp"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:layout_weight="0.2"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:visibility="gone"
+                android:id="@+id/btn_remove"
+                android:src="@drawable/remove"
+                android:layout_width="20dp"
+                android:layout_height="20dp" />
+
+            <TextView
+                android:visibility="gone"
+                android:id="@+id/tv_countMenu"
+                android:textSize="16sp"
+                android:textColor="@color/black"
+                android:layout_marginLeft="4dp"
+                android:layout_marginRight="4dp"
+                android:text="1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <ImageView
+                android:id="@+id/btn_plus"
+                android:src="@drawable/plus"
+                android:layout_width="20dp"
+                android:layout_height="20dp" />
+
+        </LinearLayout>
 
     </LinearLayout>
 </LinearLayout>
