--- a/app/src/main/res/layout/activity_info_account.xml
+++ b/app/src/main/res/layout/activity_info_account.xml
@@ -411,7 +411,8 @@
     </android.support.v7.widget.RecyclerView>
 
         <Button
-            android:visibility="gone"
+            android:layout_marginBottom="24dp"
+            android:visibility="visible"
             android:layout_marginTop="24dp"
             android:layout_gravity="center"
             android:id="@+id/btn_save"
