--- a/app/src/main/res/layout/activity_detail_restaurant.xml
+++ b/app/src/main/res/layout/activity_detail_restaurant.xml
@@ -96,7 +96,7 @@
 
     <FrameLayout
         android:id="@+id/view_review"
-        android:layout_gravity="end|bottom"
+        android:layout_gravity="start|bottom"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
