--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -22,7 +22,7 @@
 
         <TextView
             android:layout_gravity="center"
-            android:text="@string/address_user"
+            android:text="@string/history_address"
             android:textColor="@color/black"
             android:textSize="16sp"
             android:layout_width="wrap_content"
