--- a/app/src/main/res/layout/item_account_admin_manage.xml
+++ b/app/src/main/res/layout/item_account_admin_manage.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:background="@color/white"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -68,6 +69,7 @@
                 android:layout_marginStart="8dp" />
 
             <FrameLayout
+                android:id="@+id/root_view"
                 android:layout_marginLeft="8dp"
                 android:layout_weight="1"
                 android:layout_width="0dp"
@@ -111,17 +113,16 @@
                         android:ellipsize="end"
                         android:maxLines="3"
                         android:textSize="14sp"
-                        android:text="abc@gmail.com"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent" />
 
                     <TextView
+                        android:textColor="@color/blue"
                         android:layout_marginLeft="8dp"
                         android:layout_marginTop="8dp"
                         android:id="@+id/tv_phone"
                         android:fontFamily="sans-serif-medium"
                         android:textSize="14sp"
-                        android:text="0374676486"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
 
@@ -131,7 +132,15 @@
                         android:id="@+id/tv_pass"
                         android:textColor="@color/black"
                         android:layout_marginTop="8dp"
-                        android:text="123456"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+
+                    <TextView
+                        android:visibility="gone"
+                        android:layout_marginLeft="8dp"
+                        android:id="@+id/tv_boss"
+                        android:textColor="@color/red"
+                        android:layout_marginTop="8dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
 
