--- a/app/src/main/res/layout/item_branch_cus.xml
+++ b/app/src/main/res/layout/item_branch_cus.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
+    android:id="@+id/root_view"
     android:layout_marginTop="4dp"
     android:layout_marginBottom="4dp"
     android:layout_marginLeft="8dp"
