--- a/app/src/main/res/layout/view_detail_order.xml
+++ b/app/src/main/res/layout/view_detail_order.xml
@@ -28,7 +28,6 @@
                android:layout_marginLeft="8dp"
                android:ellipsize="end"
                android:maxLines="1"
-               android:text="Tra sua Koi The - gysatdyadbgshdajhgdbsgdhgahdghagdhjagdhvbvfsdgafgdfa y"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
@@ -63,14 +62,27 @@
                <TextView
                    android:id="@+id/tv_orderid"
                    android:textSize="14sp"
-                   android:text="ID: hgashdahdga jashdjka jahdjka"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content" />
+
+               <TextView
+                   android:layout_marginTop="8dp"
+                   android:textColor="@color/black"
+                   android:id="@+id/tv_address_res"
+                   android:textSize="14sp"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content" />
+
+               <TextView
+                   android:layout_marginTop="8dp"
+                   android:id="@+id/tv_describe"
+                   android:textSize="14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
 
                <TextView
                    android:id="@+id/tv_status"
                    android:layout_marginTop="8dp"
-                   android:text="Complete"
                    android:textColor="@color/bg_green"
                    android:textSize="14sp"
                    android:layout_width="wrap_content"
@@ -111,7 +123,6 @@
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
-               android:text="1 phần"
                android:textColor="@color/black"
                android:textSize="14sp" />
 
@@ -135,7 +146,6 @@
                android:textColor="@color/red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
-               android:text="2.2 km"
                android:textSize="15sp" />
 
            <TextView
@@ -143,7 +153,6 @@
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
-               android:text="1 phần"
                android:textColor="@color/black"
                android:textSize="14sp" />
 
@@ -209,7 +218,6 @@
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
-                       android:text="32000đ"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />
@@ -276,7 +284,6 @@
            <TextView
                android:id="@+id/tv_date"
                android:layout_weight="0.7"
-               android:text="0365214523"
                android:textSize="14sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
@@ -307,7 +314,6 @@
            <TextView
                android:id="@+id/tv_name"
                android:layout_weight="0.7"
-               android:text="0365214523"
                android:textSize="14sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
@@ -333,7 +339,6 @@
            <TextView
                android:id="@+id/tv_phone"
                android:layout_weight="0.7"
-               android:text="0365214523"
                android:textSize="14sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
@@ -358,7 +363,6 @@
            <TextView
                android:id="@+id/tv_address"
                android:layout_weight="0.7"
-               android:text="0365214hsgjhgad dagd hgad ajhgd hagdj hagdhjgad hjagdhjagd hjagdhjagd hagd hjagd hg a hdga hjdga hdghadghagdhagdha 523"
                android:textSize="14sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
