--- a/app/src/main/res/layout/activity_restaurant_manage.xml
+++ b/app/src/main/res/layout/activity_restaurant_manage.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.NestedScrollView android:fillViewport="true"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <FrameLayout
+    <android.support.v4.widget.NestedScrollView
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        android:fillViewport="true"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -228,23 +229,23 @@
 
         </LinearLayout>
 
-        <LinearLayout
-            android:visibility="gone"
-            android:id="@+id/btn_edit"
-            android:gravity="center"
-            android:background="@drawable/bg_circle_yellow"
-            android:layout_margin="16dp"
-            android:layout_gravity="bottom|end"
-            android:layout_width="56dp"
-            android:layout_height="56dp">
 
-            <ImageView
-                android:layout_gravity="center|center_horizontal"
-                android:src="@drawable/ic_edit_white_24dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+    </android.support.v4.widget.NestedScrollView>
+    <LinearLayout
+        android:visibility="visible"
+        android:id="@+id/btn_edit"
+        android:gravity="center"
+        android:background="@drawable/bg_circle_yellow"
+        android:layout_margin="16dp"
+        android:layout_gravity="bottom|end"
+        android:layout_width="56dp"
+        android:layout_height="56dp">
 
-        </LinearLayout>
-    </FrameLayout>
+        <ImageView
+            android:layout_gravity="center|center_horizontal"
+            android:src="@drawable/ic_edit_white_24dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
-</android.support.v4.widget.NestedScrollView>
+    </LinearLayout>
+</FrameLayout>
